--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
                 <h1>PRAJJWOL GAUTAM</h1>
                 <img src="images/glider.png">
                 <div id="links">
-                    <!-- <a href="http://blog.prajjwol.com/"> blog </a> -->
+                    <a href="https://not.acyb.org/"> blog </a> -->
                     <a href="https://twitter.com/prajjwolg"> twitter </a>
                     <a href="https://github.com/prajjwol"> github </a>
-                    <a href="http://www.linkedin.com/in/prajjwol"> linkedin </a>
-                    <a href="https://plus.google.com/103960600213892486069"> google+ </a>
-                    <a href="http://tumblr.prajjwol.com"> tumblr </a>
+                    <a href="https://www.linkedin.com/in/prajjwol"> linkedin </a>
                 </div>
             </div>
         </div>
