--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <h1>PRAJJWOL GAUTAM</h1>
                 <img src="images/glider.png">
                 <div id="links">
-                    <a href="https://not.acyb.org/"> blog </a> -->
+                    <a href="https://not.acyb.org/"> blog </a>
                     <a href="https://twitter.com/prajjwolg"> twitter </a>
                     <a href="https://github.com/prajjwol"> github </a>
                     <a href="https://www.linkedin.com/in/prajjwol"> linkedin </a>
