--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Prajjwol Gautam | Home</title>
+        <meta name="description" content="Prajjwol Gautam's Homepage">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/main.css">
@@ -22,6 +22,7 @@
                     <a href="https://twitter.com/prajjwolg"> twitter </a>
                     <a href="https://github.com/prajjwol"> github </a>
                     <a href="https://www.linkedin.com/in/prajjwol"> linkedin </a>
+                    <a href="https://www.instagram.com/trustingtoe/"> instagram </a>
                 </div>
             </div>
         </div>
