--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <meta name="description" content="Prajjwol Gautam's Homepage">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <div class="container">
             <div class="hero-unit">
                 <h1>PRAJJWOL GAUTAM</h1>
-                <img src="images/glider.png">
+                <img src="glider.png">
                 <div id="links">
                     <a href="https://not.acyb.org/"> blog </a>
                     <a href="https://twitter.com/prajjwolg"> twitter </a>
