--- a/index.html
+++ b/index.html
@@ -2,39 +2,46 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Prajjwol Gautam | Home</title>
-        <meta name="description" content="Prajjwol Gautam's Homepage">
-        <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="hero-unit">
-                <h1>PRAJJWOL GAUTAM</h1>
-                <img src="glider.png">
-                <div id="links">
-                    <a href="https://not.acyb.org/"> blog </a>
-                    <a href="https://twitter.com/prajjwolg"> twitter </a>
-                    <a href="https://github.com/prajjwol"> github </a>
-                </div>
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Prajjwol Gautam | Home</title>
+    <meta name="description" content="Prajjwol Gautam's Homepage">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="hero-unit">
+            <h1>PRAJJWOL GAUTAM</h1>
+            <img src="glider.png">
+            <div id="links">
+                {{/* <a href="https://not.acyb.org/"> blog </a> */}}
+                <a href="https://twitter.com/prajjwolg"> twitter </a>
+                <a href="https://github.com/prajjwol"> github </a>
+                <a href="https://www.linkedin.com/in/prajjwol"> linkedin </a>
             </div>
         </div>
+    </div>
 
-        <!--[if lt IE 7]>
+    <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-40653647-1'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+        var _gaq = [['_setAccount', 'UA-40653647-1'], ['_trackPageview']];
+        (function (d, t) {
+            var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+            g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g, s)
+        }(document, 'script'));
+    </script>
+</body>
+
 </html>
