Add game of life animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <canvas id="bg-canvas"></canvas>
     <div class="container">
         <div class="hero-unit">
             <h1>PRAJJWOL GAUTAM</h1>
@@ -26,6 +27,7 @@
             </div>
         </div>
     </div>
+    <script src="game_of_life.js"></script>
 </body>
 
 </html>
